--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -9,9 +9,14 @@ html {
     height: 100%;
 }
 body {
+    background: linear-gradient(
+        to bottom,
+        v.$azuloscuro,
+        v.$azulmuyoscuro,  
+    );
     font-family: v.$fuente_textos;
     font-size: 1.6rem;
-    min-height: 100%;
+    //min-height: 100%;
 }
 .contenedor {
     width: 95%;
@@ -19,7 +24,7 @@ body {
     margin: 0 auto;
 }
 .contenedor-sm {
-    max-width: 70rem;
+    max-width: 60rem;
     margin: 0 auto;
 }
 a {
