--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -15,6 +15,9 @@ $morado: #7C3AED;
 $naranja:#F59E0B;
 $rosa: #DB2777;
 
+$azuloscuro: #0a0f2c;
+$azulmuyoscuro: #000814;
+
 $blanco: #FFFFFF;
 $gris: #6b7280;
 $grisOscuro: #4B5563;
