--- a/src/scss/auth/_reestablecer.scss
+++ b/src/scss/auth/_reestablecer.scss
@@ -2,22 +2,22 @@
 @use 'base/variables' as v;
 @use 'base/mixins' as m;
 
-.login {
+.reestablecer {
 
     margin-top: 5rem;
 
     .fittrack {
-        @include m.fittrack(v.$cyan);
+        @include m.fittrack(v.$naranja);
     }
 
 
     input[type="submit"] {
-        @include m.boton(v.$cyan, v.$blanco, 4rem, 0);
+        @include m.boton(v.$naranja, v.$blanco, 4rem, 0);
     }
 
     .acciones {
         a {
-            color: color.adjust(v.$cyan, $lightness: 20%);
+            color: color.adjust(v.$naranja, $lightness: 20%);
         }
     }
 }
