--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -7,6 +7,11 @@ html {
     font-size: 62.5%;
     box-sizing: border-box;
     height: 100%;
+    background: linear-gradient(
+        to bottom,
+        v.$azuloscuro,
+        v.$azulmuyoscuro,  
+    );
 }
 body {
     background: linear-gradient(
@@ -16,7 +21,7 @@ body {
     );
     font-family: v.$fuente_textos;
     font-size: 1.6rem;
-    //min-height: 100%;
+    min-height: 100vh;
 }
 .contenedor {
     width: 95%;
