--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -15,7 +15,7 @@ $morado: #7C3AED;
 $naranja:#F59E0B;
 $rosa: #DB2777;
 
-$azuloscuro: #060b25;
+$azuloscuro: #090f33;
 $azulmuyoscuro: #000814;
 
 $blanco: #FFFFFF;
